Change color to fix contrast in ReviewScore ui element

--- a/next/src/components/ui/ReviewScore/ReviewScore.module.scss
+++ b/next/src/components/ui/ReviewScore/ReviewScore.module.scss
@@ -8,8 +8,5 @@
   }
   p {
     margin-left: 4px;
-    span {
-      color: var(--secondary-400, #97879d);
-    }
   }
 }
